fixed alignment of weather temp

--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -8,6 +8,7 @@ body{
     background-color: #443742;
     color: #EDD9A3;
     overflow: hidden;
+    user-select: none;
 }
 
 .main{
@@ -23,17 +24,36 @@ body{
     grid-column: 1 / 3;
 }
 
+.util{
+    display: grid;
+    grid-column: 4;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 20px);
+}
+
 .time{
     display: grid;
     grid-row: 1;
-    grid-column: 3;
+    grid-column: 1;
+    margin-right: 2vw;
+}
+
+#date{
+    display: grid;
+    grid-row: 1;
+    grid-column: 1;
+}
+
+#clock{
+    display: grid;
+    grid-row: 2;
+    grid-column: 1;
 }
 
 .weather{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-column: 4;
-    grid-row: 1;
+    grid-column: 2;
+    grid-row: 1 / 2;
 }
 
 #icon{
@@ -41,6 +61,7 @@ body{
     grid-row: 1;
     grid-column: 1;
     stroke: #EDD9A3;
+    margin-right: 10px;
 }
 
 #temp{
