--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -8,34 +8,32 @@
         grid-template-rows: repeat(6, 75px);
         
     }
-
     .greeting{
         display: grid;
-        grid-row: 2;
+        grid-row: 1;
         grid-column: 1 / 5;
     }
 
-
-    .time{
+    .util{
         display: grid;
-        grid-row: 1;
-        grid-column: 1;
+        grid-row: 2;
+        grid-column: 1 / 2;
     }
 
     .weather{
         display: grid;
         grid-row: 1;
-        grid-column: 4;
+        grid-column: 5;
     }
 
     .searchForm{
         display: grid;
-        grid-row: 2;
+        grid-row: 3;
     }
 
     .links{
         display: grid;
-        grid-row: 3;
+        grid-row: 4;
         grid-column: 1 / 6;
         grid-template-columns: repeat(5, 1fr);
         border-bottom-style: solid;
@@ -52,7 +50,7 @@
     #news{
         margin-top: 2vh;
         display: grid;
-        grid-row: 4;
+        grid-row: 5;
         grid-column: 1 / 5;
     }
 
